# ocaml-tree-sitter-core

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conf-tree-sitter.opam  configure  dune  dune-project  notes.md  ocaml-tree-sitter.opam  package-lock.json  package.json  prts.opam  tree-sitter.opam
.circleci/: config.yml
.github/workflows/: bento.yml  ci.yml  pre-commit.yml  semgrep.yml
doc/: README.md  adding-a-language.md  ast.md  code-generation-pipeline.md  cst.md  macos.md  node-setup.md  overview.md  parsing-stats-precision.md  parsing.md  related-repos.md  release.md  updating-a-grammar.md
import/: Makefile  dune  notes.md
import/scripts/: run-test
lang/: .gitignore  Makefile  Makefile.common  README.md  add-simple-lang  csharp  release  ruby  test-lang
lang/c/: Makefile  extensions.txt  fyi.list  projects.txt
lang/c-sharp/: extensions.txt  fyi.list
lang/cpp/: Makefile  extensions.txt  fyi.list  projects.txt
lang/csharp/: Makefile  grammar.js
lang/go/: Makefile  extensions.txt  fyi.list
lang/hack/: extensions.txt  fyi.list
lang/hcl/: extensions.txt  fyi.list
lang/java/: Makefile  extensions.txt  projects.txt
lang/javascript/: Makefile  extensions.txt  fyi.list  projects.txt
lang/kotlin/: extensions.txt  fyi.list
lang/lua/: extensions.txt  fyi.list  projects.txt
lang/ocaml/: extensions.txt  fyi.list  projects.txt
lang/r/: extensions.txt  fyi.list  projects.txt
lang/ruby/: Makefile  Makefile.local  extensions.txt  fyi.list  run-examples-part1
lang/rust/: extensions.txt  fyi.list
lang/scala/: extensions.txt  fyi.list  projects.txt
lang/semgrep-grammars/: Makefile  add-simple-lang  sg-add-simple-lang
lang/tsx/: extensions.txt  fyi.list  projects.txt
lang/typescript/: Makefile  define-grammar.js  extensions.txt  fyi.list  grammar.js  javascript-grammar.js  make-grammar-js  make-grammar-js-simple  projects.txt  projects.txt.private
lib/: ast_grammar.ml  ast_grammar.re  ast_grammar_normalized.ml  ast_grammar_normalized.re  codegen_json_reader.re  codegen_json_reader.rei  codegen_types.ml  codegen_types.mli  codegen_types.re  codegen_types.rei  dune  generate_cst.py  normalize_grammar.re  normalize_grammar.rei  parse_grammar.ml  parse_grammar.mli  parse_grammar.re  parse_grammar.rei  test_tree_sitter.ml  test_tree_sitter.mli  test_tree_sitter.re  test_tree_sitter.rei
lib.orig/: ast_grammar_normalized.re  dune  parse_grammar.re
patch/tree-sitter-0.22.6/: 0001-Makefile-backports.patch  Makefile  Makefile.patch
proto/: test.ml  tree-sitter-parser  tree-sitter-parser.js
scripts/: aggregate-parse-errors  build-c  build-ocaml  check-expectations  check-prerequisites  configure-tree-sitter  count-repo-lines  download-tree-sitter  gen-c  gen-ocaml  generate-test-data  generate-test-part1  generate-test-part2  install-runtime  install-tree-sitter  install-tree-sitter-cli  install-tree-sitter-lib  lang-stat  most-starred-for-language  most-starred-for-language.py  ocaml-tree-sitter-gen-c  ocaml-tree-sitter-gen-ocaml  parse-examples  parse-examples.bash  parse-step1  parse-step2  prep-lang  rebuild-everything  report-stat  run-test  setup-node  setup-opam  simplify-grammar  switch-tree-sitter-version  tree-sitter-parser.js  update-slim-repos  update-version-symlinks  upload-stat.py
scripts/bench-runner/: Cargo.toml
src/: .gitignore  Makefile  Makefile.common  prep.common
src/bindings/lib/: Tree_sitter_API.ml  Tree_sitter_output.atd  Tree_sitter_output.ml  Tree_sitter_output.mli  bindings.c  dune
src/bindings/lib/config/: discover.ml  dune
src/lib/: AST_grammar.ml  AST_grammar.mli  Codegen.ml  Codegen.mli  Codegen_parse.ml  Indent.ml  Json_rule_adapter.ml  Json_rule_adapter.mli  Protect_ident.mli  Topo_sort.ml  Topo_sort.mli  Tree_sitter.atd  Tree_sitter_output.atd  dune
src/run/lib/: Backtrack_matcher.ml  Combine.ml  Combine.mli  Input_file.ml  Input_file.mli  Loc.ml  Loc.mli  Main.ml  Main.mli  Matcher.ml  Parsing_result.ml  Parsing_result.mli  Possessive_matcher.ml  Print_sexp.ml  Raw_tree.ml  Raw_tree.mli  Run.ml  Run.mli  Sample.ml  Snippet.ml  Snippet.mli  Src_file.ml  Src_file.mli  Stat.ml  Support.ml  Support.mli  Thompson_matcher.ml  Token.ml  Tree_sitter_dump.ml  Tree_sitter_error.atd  Tree_sitter_error.ml  Tree_sitter_error.mli  Tree_sitter_output.atd  Tree_sitter_output.ml  Tree_sitter_parsing.ml  Tree_sitter_parsing.mli  Util_file.ml  Util_file.mli  Util_string.ml  Util_string.mli  (+1 more)
src/semgrep-c-sharp/: grammar.js  prep
src/semgrep-csharp/: grammar.js
src/semgrep-javascript/: grammar.js  prep
src/semgrep-kotlin/: grammar.js
src/semgrep-lua/: grammar.js
src/semgrep-r/: grammar.js
src/semgrep-ruby/: grammar.js
src/semgrep-rust/: grammar.js
src/semgrep-typescript/: .gitignore  package.json  prep
src/test/: dune  test.ml
test/: .gitignore  Makefile  Makefile.common  README.md  bindings.template.c  discover.template.ml  dune.template  regen-dune  setup
test/abi-mismatch/: check-test-output  grammar.js
test/anon-pat/: dune
test/arithmetic/: arithmetic_cst_json_reader.ml  ex1.arith  test.re
test/backtrack/: dune
test/bash/: check-test-output  grammar.js  grammar.js.fail
test/choice/: dune  grammar.js
test/choice-seq/: dune
test/emoji/: dune  grammar.js
test/explicit-extra/: dune  grammar.js
test/extras/: check-test-output  dune  grammar.js
test/ignore-error/: dune
test/ignore-error/test/xfail/: deep-error
test/ignore-missing/: grammar.js
test/implicit-extra/: check-test-output  dune  example-parse.expected  grammar-rev.js.expected  grammar.js
test/inline/: check-test-output  dune  grammar-rev.js.expected  grammar.js
test/inline-token/: check-test-output  dune
test/opt-repeat1/: dune  grammar.js
test/pattern/: check-test-output  dune
test/pattern-flags/: grammar.js
test/pattern-name/: check-test-output  dune  grammar.js
test/prec/: dune
test/rectypes/: dune
test/recurse/: dune  grammar.js
test/repeat-choice/: dune
test/report-missing/: dune  (+2 more)
tests/: .gitignore  Makefile  setup
(+245 files in other folders)
