(dirs :standard)

(rule
 (action
  (with-stdout-to
   tree-sitter-sources.tgz
   (run
    curl
    -L
    https://github.com/tree-sitter/tree-sitter/archive/refs/tags/v%{read-lines:tree-sitter-version}.tar.gz))))

(rule
 (mode
  (promote (until-clean)))
 (target
  (dir tree-sitter-repo))
 (deps
  (:source-archive tree-sitter-sources.tgz)
  (:patches
   (source_tree patch)))
 (action
  (progn
   (run mkdir -p %{target})
   (run tar xf %{source-archive} -C %{target} --strip-components=1)
   (bash
    ; Apply each patch for this version. nullglob needed so we don't fail when
    ; a version has no patches (otherwise the for loop has one iteration over
    ; the literal pattern, when the glob fails to expand)
    "shopt -s nullglob; 
     for patch in patch/tree-sitter-%{read-lines:tree-sitter-version}/*.patch; do
       patch_path=$(realpath $patch);
       patch -N -b -i $patch_path -d %{target};
     done"))))

(rule
 (deps tree-sitter-repo)
 (target
  (dir tree-sitter-out))
 (action
  (chdir
   tree-sitter-repo
   (progn
    ; Note: we need absolute paths here so that the generated .pc file results
    ; in absolute paths for pkg-config.
    (bash "PREFIX=$(realpath %{project_root})/tree-sitter-out make")
    (bash "PREFIX=$(realpath %{project_root})/tree-sitter-out make install")
    ; Remove shared libs to avoid dynamic linking
    ; macos
    (run rm -f %{project_root}/tree-sitter-out/lib/libtree-sitter.0.26.dylib)
    (run rm -f %{project_root}/tree-sitter-out/lib/libtree-sitter.0.dylib)
    (run rm -f %{project_root}/tree-sitter-out/lib/libtree-sitter.dylib)
    ; windows
    (run rm -f %{project_root}/tree-sitter-out/lib/libtree-sitter.0.26.dll)
    (run rm -f %{project_root}/tree-sitter-out/lib/libtree-sitter.0.dll)
    (run rm -f %{project_root}/tree-sitter-out/lib/libtree-sitter.dll)
    ; linux
    (run rm -f %{project_root}/tree-sitter-out/lib/libtree-sitter.0.26.so)
    (run rm -f %{project_root}/tree-sitter-out/lib/libtree-sitter.0.so)
    (run rm -f %{project_root}/tree-sitter-out/lib/libtree-sitter.so)))))

(rule
 (deps tree-sitter-repo)
 (target tree-sitter)
 (action
  (chdir
   tree-sitter-repo
   ; Don't infer deps/targets since otherwise dune expects cloning the repo to
   ; create target/release/tree-sitter
   (no-infer
    (progn
     (run cargo build --release)
     (copy target/release/tree-sitter ../tree-sitter))))))

; Main build - depends on setup

(alias
 (name build)
 (deps
  tree-sitter-out
  (alias_rec src/all)))

; Convenience symlink

(rule
 (alias post-build)
 (deps
  (alias build))
 (action
  (bash
   "mkdir -p bin && ln -sf ../_build/install/default/bin/ocaml-tree-sitter bin/ocaml-tree-sitter || true")))

(alias
 (name runtest)
 (deps
  (alias build)))

(install
 (section lib)
 (package tree-sitter)
 (files
  (glob_files tree-sitter-out/lib/*)))

(install
 (section lib)
 (package tree-sitter)
 (dirs tree-sitter-out/include))

(install
 (section bin)
 (package tree-sitter)
 (files tree-sitter))
