opam-version: "2.0"
maintainer: "martin@mjambon.com"
authors: ["Martin Jambon"]
homepage: "https://github.com/mjambon/prts"
bug-reports: "https://github.com/mjambon/prts/issues"
dev-repo: "git+https://github.com/mjambon/prts.git"
license: "BSD-3-Clause"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "atdgen"
  "cmdliner"
  "dune" {>= "2.1"}
  "ocaml"
  "tsort"
]

synopsis: ""

description: """
prts translates a tree-sitter json grammar to Reason type definitions
for an AST corresponding to this grammar.
"""

url {
  src: "git+https://github.com/mjambon/prts"
}
