opam-version: "2.0"
maintainer: "martin@r2c.dev"
authors: ["r2c"]
homepage: "https://github.com/returntocorp/ocaml-tree-sitter"
bug-reports: "https://github.com/returntocorp/ocaml-tree-sitter/issues"
dev-repo: "git+https://github.com/returntocorp/ocaml-tree-sitter.git"
license: "GPL-3.0-only"

extra-source "downloads/v0.20.6.tar.gz" {
  src: "https://github.com/tree-sitter/tree-sitter/archive/refs/tags/v0.20.6.tar.gz"
}

build: [
  ["./configure"]
  ["./scripts/install-tree-sitter-lib"]
  [make]
]

install: [make "install"]

depends: [
  "alcotest"
  "ANSITerminal"
  "atdgen"
  "cmdliner"
  "conf-pkg-config"
  "dune" {>= "2.1"}
  "dune-configurator" {>= "3.10.0"}
  "ocaml"
  "ppx_deriving"
  "sexplib"
  "tsort" {>= "2.0"}
]

synopsis: "Code generator for parsing the output of tree-sitter parsers"

description: """
Ocaml-tree-sitter translates a tree-sitter json grammar to OCaml code
for recovering a full CST from the output for a tree-sitter parser.
"""

url {
  src: "git+https://github.com/semgrep/ocaml-tree-sitter-core"
}
