opam-version: "2.0"
maintainer: "martin@r2c.dev"
authors: ["r2c"]
homepage: "https://github.com/returntocorp/ocaml-tree-sitter"
bug-reports: "https://github.com/returntocorp/ocaml-tree-sitter/issues"
dev-repo: "git+https://github.com/returntocorp/ocaml-tree-sitter.git"
license: "LGPL-2.1"

build: [
  ["./configure"]
  [make]
]

install: [make "install"]

depends: [
  "alcotest"
  "ANSITerminal"
  "atdgen"
  "cmdliner"
  "conf-pkg-config"
  "conf-tree-sitter" { build }
  "dune" {>= "2.1"}
  "dune-configurator" {>= "3.10.0"}
  "ocaml"
  "ppx_deriving"
  "sexplib"
  "tsort" {>= "2.0"}
]

synopsis: "Code generator for parsing the output of tree-sitter parsers"

description: """
Ocaml-tree-sitter translates a tree-sitter json grammar to OCaml code
for recovering a full CST from the output for a tree-sitter parser.
"""

url {
  src: "git+https://github.com/returntocorp/ocaml-tree-sitter"
}
