opam-version: "2.0"
license: "LGPL-2.1-only"
maintainer: "martin@semgrep.dev"
authors: ["Semgrep, Inc."]
homepage: "https://github.com/semgrep/ocaml-tree-sitter-core"
bug-reports: "https://github.com/semgrep/ocaml-tree-sitter-core/issues"
dev-repo: "git+https://github.com/semgrep/ocaml-tree-sitter-core.git"

build: [
]

install: []

depends: [
  "alcotest"
  "ANSITerminal"
  "atdgen"
  "cmdliner" { < "2.0.0" }
  "conf-pkg-config"
  "dune" {>= "2.1"}
  "dune-configurator" {>= "3.10.0"}
  "ocaml"
  "ppx_deriving"
  "sexplib"
  "tsort" {>= "2.0"}
]

synopsis: "Code generator for parsing the output of tree-sitter parsers"

description: """
Ocaml-tree-sitter translates a tree-sitter json grammar to OCaml code
for recovering a full CST from the output for a tree-sitter parser.
"""

url {
  src: "git+https://github.com/semgrep/ocaml-tree-sitter"
}
