; Build OCaml bindings to the tree-sitter's C API.
;
; tree-sitter can be installed by cloning its git repo, then
; 'make && make install'
;
(library
  (public_name tree-sitter.bindings)
  (name tree_sitter_bindings)
  (libraries atdgen-runtime)
  (foreign_stubs
    (language c)
    (names bindings)
    ; coupling: config/discover.ml generates the flags for the C stubs
    (flags (:standard) (:include c_flags.sexp)
    )
  )

  ; coupling: config/discover.ml generates the flags for the C stubs
  (c_library_flags (:include c_library_flags.sexp))
)

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action  (run ./config/discover.exe)))

; atdgen preprocessing for json support
(rule
 (targets Tree_sitter_output_j.ml Tree_sitter_output_j.mli)
 (deps    Tree_sitter_output.atd)
 (action  (run atdgen -j -j-std %{deps})))

; atdgen preprocessing for json support
(rule
 (targets Tree_sitter_output_t.ml Tree_sitter_output_t.mli)
 (deps    Tree_sitter_output.atd)
 (action  (run atdgen -t %{deps})))
