(library
 (public_name ocaml-tree-sitter.run)
 (name ocaml_tree_sitter_run)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord))
 (libraries
   atdgen-runtime
 )
)

(rule
 (targets Tree_sitter_output_j.ml Tree_sitter_output_j.mli)
 (deps    Tree_sitter_output.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets Tree_sitter_output_t.ml Tree_sitter_output_t.mli)
 (deps    Tree_sitter_output.atd)
 (action  (run atdgen -t %{deps})))
